guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
        - image: hosted-docker-registry-azure-devops-nexus-prod.apps.ocpcorp.vtal.intra/teste_openshift_repo1/amb-dev:20260116.1
          name: guestbook-ui
          ports:
            - containerPort: 7777
      imagePullSecrets:
        - name: proxy-nexus-secret
